# giant-spellbook

./: Cargo.toml  README.md
src/: analysis.rs  bithack.rs  commander.rs  diff.rs  disassemble.rs  encoding.rs  hashfunctions.rs  hunter.rs  main.rs  parsers.rs  researcher.rs  seek.rs  tls_debug.rs  utilities.rs
src/hunter/: cve.rs  misc.rs
