[package]
name = "giant-spellbook"
version = "0.2.0"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "cryptographic multi-tool with file analysis, encoding, bitflipping, splitting, hashing, encryption, signing, and more"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/giant-spellbook"
readme = "README.md"
categories = ["cryptography"]
keywords = ["cryptanalysis", "Dilithium5-AES", "pqc", "encryption", "binary-analysis"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.22.1"
bs58 = { version="0.5.1", features=["check"] }
hex = "0.4.3"
zeroize = "1.8.1"
blake3 = "1.4.0"
blake2 = "0.10.6"
sha3 = "0.10.8"
sha2 = "0.10.6"
digest = "0.10.7"
chrono = "0.4.26"
users = "0.11.0"
rpassword = "7.2.0"
argon2 = "0.5.1"
enchantress = "0.1.8"
enchanter = "0.1.0"
wormsign = "0.1.8"
x509-parser = "0.17.0"
der-parser = "10.0.0"
capstone = "0.13.0"
