[package]
name = "giant-spellbook"
version = "0.3.5"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "cryptographic multi-tool with file analysis, encoding, bitflipping, splitting, hashing, encryption, signing, and more"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/giant-spellbook"
readme = "README.md"
categories = ["cryptography"]
keywords = ["cryptanalysis", "Dilithium5-AES", "pqc", "encryption", "binary-analysis"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.22.1"
bs58 = { version="0.5.1", features=["check"] }
base32 = "0.5.1"
hex = "0.4.3"
zeroize = "1.8.1"
blake3 = "1.4.0"
blake2 = "0.10.6"
sha3 = "0.10.8"
sha2 = "0.10.6"
digest = "0.10.7"
users = "0.11.0"
rpassword = "7.2.0"
argon2 = "0.5.1"
enchantress = "0.1.8"
enchanter = "0.1.0"
wormsign = "0.1.9"
x509-parser = "0.18.0"
der-parser = "10.0.0"
capstone = "0.13.0"
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
time = "0.3.41"
zerocopy = "0.8.26"
urlencoding = "2.1.3"
