[package]
name = "giant-spellbook"
version = "0.4.4"
edition = "2024"
authors = ["Keegan Bowen <carefuldata@protonmail.com>"]
license = "MIT"
description = "cryptographic multi-tool with file analysis, encoding, bitflipping, splitting, hashing, encryption, signing, and more"
homepage = "https://carefuldata.com"
repository = "https://github.com/jpegleg/giant-spellbook"
readme = "README.md"
categories = ["cryptography"]
keywords = ["cryptanalysis", "Dilithium5-AES", "pqc", "encryption", "binary-analysis"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
base64 = "0.22.1"
bs58 = { version="0.5.1", features=["check"] }
base32 = "0.5.1"
hex = "0.4.3"
zeroize = "1.8.2"
blake3 = "1.8.2"
blake2 = "0.10.6"
sha3 = "0.10.8"
sha2 = "0.10.9"
digest = "0.10.7"
uzers = "0.12.0"
rpassword = "7.4.0"
argon2 = "0.5.3"
enchantress = "0.1.10"
enchanter = "0.1.2"
wormsign = "0.1.11"
x509-parser = "0.18.0"
der-parser = "10.0.0"
capstone = "0.13.0"
rustls-pemfile = "2.2.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
time = "0.3.44"
zerocopy = "0.8.31"
urlencoding = "2.1.3"
openssl-sys = { version = "0.9.111", features = ["vendored"] }
rustls = { version = "0.23.35", features = ["tls12", "std"], default-features = false }
rustls-openssl = "0.3.0"
